--- a/src/todo
+++ b/src/todo
@@ -38,6 +38,10 @@ pip install pytest-playwright
 TIPS
     ・pythonの実行 ex python test4racco.py
     ・pytestの実行 ex pytest src/yahoooF.py
+    ・Pythonでimportしたモジュールの場所を調べる
+        python
+        >>>import numpy
+        >>>print(numpy.__file__)
 
 
 
